# Entropy

./: Dockerfile  LICENSE  README.md  docker-compose.yml  entropyos.yaml  package-lock.json  package.json  pyproject.toml
benchmark/: real_llm.py
demo/: agent.py  benchmark.py  validate.py
entropyos/: __init__.py  api.py  compressor.py  config.py  evaluator.py  memory.py  models.py  optimizer.py  pipeline.py  prompt_compiler.py  retrieval.py  scorer.py
entropyos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
entropyos/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
entropyos/backends/: __init__.py  memory.py  vector.py
entropyos/cli/: main.py
entropyos/integrations/: __init__.py  langchain.py
entropyos/plugins/: __init__.py  base.py  registry.py
entropyos/sdk/: __init__.py  client.py
entropyos/security/: __init__.py  audit.py  encrypt.py  pii.py
tests/: test_benchmark.py  test_demo.py  test_integration.py  test_integrations.py  test_smoke.py  test_unit.py
