[project]
name = "entropyos"
version = "0.9.0"
description = "AI middleware — maximize useful information per token"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.109", "uvicorn>=0.27"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
embeddings = ["sentence-transformers>=2.2"]
redis = ["redis>=5.0"]
all = [
    "entropyos[api]",
    "entropyos[openai]",
    "entropyos[anthropic]",
    "entropyos[embeddings]",
    "entropyos[redis]",
]

[project.scripts]
entropyos = "entropyos.cli.main:cli"

[tool.ruff]
line-length = 100
